--- a/aula10/ex007.html
+++ b/aula10/ex007.html
@@ -5,6 +5,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Somando Numeros</title>
+    <style>
+        h1{
+            font: normal 25pt arial;
+            margin: 30px;
+        }
+        #res{
+            font: normal 18pt arial;
+            margin: 30px;
+        }
+    </style>
 </head>
 <body>
     <h1>Somando Valores</h1>
@@ -21,7 +31,7 @@
         var n1 = Number(tn1.value)
         var n2 = Number(tn2.value)
         var s = n1 + n2
-        res.innerHTML = `A somaentre ${n1} e ${n2} é igual a ${s}`
+        res.innerHTML = `A soma entre ${n1} e ${n2} é igual a ${s}`
         }
     </script>
 </body>
