--- a/aula 11/ex09.html
+++ b/aula 11/ex09.html
@@ -18,7 +18,7 @@
         function calcular(){
             var txt1 = window.document.getElementByIdt('txt')
             var res = window.document.getElementById('res')
-            res.innerHTML = `Voce é`
+            res.innerHTML = `Voce é de ` ${txt1}
         }
     </script>
     
